Made changes in title bar

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Chinese-character",
-    "homepage": "http://rohanakar.github.io/Chinese-character",
+    "homepage": "http://rohanakar.github.io/Chinese-character-Landing-Page",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
